# ora-core-rag

./: .gitignore  LICENSE  MODULE.md  README.md  pyproject.toml
data/audit/: .gitkeep
docs/: ARCH_PLUS_IMPLANT.md  ORA_CORE_RAG_ARCHITECTURE_WhitePaper.md  ORA_CORE_RAG_Governance_WhitePaper.md
examples/: arch_persona_activation.json  client_route_manifest.json  ora_sources.json  rag_governor.local.json  rag_registry.json
schemas/: arch_persona_activation.schema.json  client_route.schema.json  ora_core_rag.schema.json  rag_registry.schema.json
specs/: ORA_CORE_RAG_ARCH_PLUS_IMPLANT_V1_0.json  ORA_CORE_RAG_SPEC_V1_0_PUBLIC.json
src/ora_core_rag/: __init__.py  __main__.py  arch_persona.py  audit.py  chunker.py  cli.py  github_sources.py  governor.py  hashing.py  index.py  manifest.py  neroflux.py  orchestrator.py  registry.py  route_gate.py
tests/: test_arch_persona.py  test_audit.py  test_github_sources.py  test_governor.py  test_index.py  test_neroflux.py  test_orchestrator.py  test_registry.py  test_route_gate.py
whitepapers/ora-bundle/: ORA_CORE_OS_ORA_RAG_MODULAR_ARCHITECTURE_WhitePaper.md  ORA_CORE_RAG_ARCHITECTURE_WhitePaper.md  README_whitepaper_bundle.md
